# gw2-strs

./: Cargo.toml  LICENSE
ref/tests/: 2440761  2441520  2444710  2472403
src/: lib.rs  reader.rs
tests/: test.rs
